      --package-name, --package-version to control the generation of the PO
      header. Closes: #537245
    + Wml: Added option customtag. Closes: #537236
  * debian/control: Updated Vcs-Browser URL. Closes: #528303
  * debian/control: Standards-Version bumped to 3.8.2. No changes.
  * debian/control: Fixed Vcs-Cvs field.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Tue, 21 Jul 2009 18:59:47 +0200

po4a (0.36.1-1) unstable; urgency=low

  * New upstream release.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Sun, 05 Apr 2009 13:45:49 +0200

po4a (0.36-3) unstable; urgency=low

  * pod: Do not generate =encoding headers with no encoding. Closes: #520942

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Mon, 23 Mar 2009 21:47:07 +0100

po4a (0.36-2) unstable; urgency=low

  * Upload to unstable.
  * Include upstream changes for the TeX and LaTeX modules:
    - Fix support for inline customization of separators.
    - Added support for the tabularx environment.

 -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Mon, 16 Mar 2009 21:35:10 +0100

po4a (0.36-1) experimental; urgency=low

  * New upstream release.
    - New presentation of placeholders in the Xml module. Closes: #513716
    - Updated po4a.7 manpage so that file names in the ASCII art chart match
      command line and text. Closes: #513791
    - Added "HOWTO customize po4a" section to po4a(7). Closes: #501180
    - The XML module and derivatives do not fail when the doctype does not
      match the expected one. Closes: #514828
    - Use kpsewhich instead of directly using TEXINPUTS to find the included
      files. Closes: #509553
  * debian/examples/compare-msgids.pl: Added script to output wdiffs between
    the new msgid and the old ones (generated when --previous) is used.
    Closes: #514755
  * debian/rules, debian/po4a.examples: Install examples.
