@@ -5,7 +5,7 @@ Maintainer: Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>
 Uploaders: Martin Quinson <mquinson@debian.org>, Pierre Machard <pmachard@debian.org>
 Standards-Version: 3.8.2
 Build-Depends-Indep: perl-modules (>= 5.10.0-16), libmodule-build-perl, gettext (>= 0.16)
-Build-Depends: debhelper (>> 4.0.0)
+Build-Depends: debhelper (>> 7.0.0)
 Homepage: http://po4a.alioth.debian.org/
 Vcs-Cvs: :pserver:anonymous@cvs.alioth.debian.org:/cvsroot/po4a
 Vcs-Browser: http://alioth.debian.org/scm/viewvc.php/po4a/?root=po4a
