@@ -13,8 +13,9 @@ po4a (0.36.2-1) unstable; urgency=low
   * debian/control: Updated Vcs-Browser URL. Closes: #528303
   * debian/control: Standards-Version bumped to 3.8.2. No changes.
   * debian/control: Fixed Vcs-Cvs field.
+  * debian/control, debian/rules, debian/compat: switch to debhelper 7.
 
- -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Tue, 21 Jul 2009 18:59:47 +0200
+ -- Nicolas FRANCOIS (Nekral) <nicolas.francois@centraliens.net>  Tue, 21 Jul 2009 19:05:55 +0200
 
 po4a (0.36.1-1) unstable; urgency=low
 
